fixed bid-info card alignment

--- a/public/styles/detailed.scss
+++ b/public/styles/detailed.scss
@@ -259,12 +259,15 @@
                 grid-row: 1/3;
                 display: flex;
                 flex-direction: column;
-                align-items: left;
+                align-items: flex-start;
                 justify-content: center;
                 padding-left: 5px;
 
                 & span.bid-info {
                     width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: left;
                     font-size: 1.2em;
                     color: $black;
                     font-weight: 500;
